[gd_scene load_steps=15 format=3 uid="uid://csb76hqfibqvn"]

[ext_resource type="Script" path="res://scenes/levels/level3/level_3_1.gd" id="1_f82mu"]
[ext_resource type="Texture2D" uid="uid://b1tan5h5y52j7" path="res://assets/tiles/level_2/tile.png" id="2_r7vg8"]
[ext_resource type="PackedScene" uid="uid://2ojgicxc8udc" path="res://scenes/levels/level3/fish.tscn" id="3_b1ev0"]
[ext_resource type="PackedScene" uid="uid://bxwboaoquym2d" path="res://scenes/levels/level1/food.tscn" id="4_2jg7m"]
[ext_resource type="PackedScene" uid="uid://b0dqgdwec8gxv" path="res://scenes/hud/level2/hud.tscn" id="6_5064b"]
[ext_resource type="Texture2D" uid="uid://bbu5bcqigdqtg" path="res://assets/tiles/rock.png" id="6_pueto"]
[ext_resource type="PackedScene" uid="uid://cfqu8cnun1k70" path="res://scenes/hud/level3/task_1.tscn" id="6_scjwj"]
[ext_resource type="Script" path="res://scenes/hud/level3/hud.gd" id="7_gv58x"]
[ext_resource type="PackedScene" uid="uid://d1l05slocvdum" path="res://scenes/objects/listva2.tscn" id="8_suhvw"]
[ext_resource type="PackedScene" uid="uid://ccuaffq3i06s2" path="res://scenes/objects/listva.tscn" id="9_cxxxh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qpfqc"]
texture = ExtResource("2_r7vg8")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, -128, -128, 128, 128, 128, 128, -128)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_labha"]
tile_size = Vector2i(256, 256)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_qpfqc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2m3i"]
size = Vector2(249, 255)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v05nn"]
size = Vector2(261, 242)

[node name="Level3_1" type="Node2D"]
script = ExtResource("1_f82mu")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_labha")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 0, 0, 65538, 65536, 0, 65539, 65536, 0, 65540, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 65543, 65536, 0, 65544, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 131075, 65536, 0, 131076, 65536, 0, 131077, 65536, 0, 131078, 65536, 0, 131079, 65536, 0, 131080, 65536, 0, 262145, 65536, 0, 262146, 65536, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262147, 65536, 0, 262148, 65536, 0, 262149, 65536, 0, 327680, 0, 0, 327681, 65536, 0, 327682, 0, 0, 327683, 65536, 0, 393216, 0, 0, 393217, 65536, 0, 393218, 0, 0, 393219, 65536, 0, 393220, 65536, 0, 327684, 0, 0, 327685, 0, 0, 393221, 65536, 0, 458757, 0, 0, 458756, 0, 0, 458755, 0, 0, 458754, 0, 0, 524290, 65536, 0, 458752, 0, 0, 458753, 65536, 0, 524289, 65536, 0, 524288, 0, 0, 524292, 65536, 0, 524293, 65536, 0, 524294, 65536, 0, 458758, 0, 0, 393222, 65536, 0, 327686, 0, 0, 262150, 0, 0, 524291, 65536, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 458759, 0, 0, 393223, 65536, 0, 327687, 65536, 0, 262151, 65536, 0, 458761, 0, 0, 393225, 0, 0, 327689, 0, 0, 262153, 65536, 0, 196617, 0, 0, 458760, 0, 0, 393224, 65536, 0, 327688, 0, 0, 262152, 65536, 0, 524295, 65536, 0, 524296, 65536, 0, 524297, 0, 0, 524298, 65536, 0, 524299, 0, 0, 524300, 65536, 0, 458762, 0, 0, 458763, 0, 0, 393227, 65536, 0, 327691, 0, 0, 327692, 0, 0, 458764, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 524301, 65536, 0, 458765, 65536, 0, 393230, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 458766, 0, 0, 393226, 65536, 0, 327690, 0, 0, 262154, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 196620, 0, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 131084, 65536, 0, 196624, 0, 0, 131088, 0, 0, 65552, 65536, 0, 16, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65550, 65536, 0, 131086, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 0, 0, 196622, 0, 0, 196621, 0, 0, 131085, 65536, 0, 65549, 65536, 0, 65548, 65536, 0, 65547, 65536, 0, 65546, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 131082, 65536, 0, 131083, 65536, 0, 196619, 0, 0, 196618, 0, 0, 524302, 65536, 0, 589838, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 524303, 65536, 0, 589839, 65536, 0, 655375, 0, 0, 720911, 65536, 0, 786447, 65536, 0, 655374, 0, 0, 655373, 0, 0, 655372, 65536, 0, 655371, 0, 0, 655370, 65536, 0, 655369, 0, 0, 655368, 65536, 0, 655367, 0, 0, 655366, 65536, 0, 655365, 65536, 0, 655364, 65536, 0, 655363, 65536, 0, 655362, 65536, 0, 589826, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 589832, 65536, 0, 589833, 0, 0, 589834, 65536, 0, 589835, 0, 0, 589836, 65536, 0, 589837, 0, 0, 720909, 65536, 0, 720908, 65536, 0, 720907, 0, 0, 720906, 65536, 0, 720905, 0, 0, 720904, 65536, 0, 720903, 0, 0, 720902, 0, 0, 720901, 0, 0, 720910, 65536, 0, 786446, 0, 0, 786445, 0, 0, 851983, 65536, 0, 851982, 65536, 0, 851981, 65536, 0, 851980, 65536, 0, 851984, 0, 0, 917520, 0, 0, 917519, 65536, 0, 917518, 0, 0, 917517, 0, 0, 983056, 0, 0, 1048592, 0, 0, 1048591, 0, 0, 1048590, 0, 0, 1048589, 0, 0, 1048588, 0, 0, 983055, 65536, 0, 983054, 0, 0, 983053, 65536, 0, 983052, 65536, 0, 917516, 0, 0, 1048587, 0, 0, 1048586, 0, 0, 1048585, 0, 0, 1048584, 0, 0, 1048583, 0, 0, 1048582, 0, 0, 1048581, 0, 0, 1048580, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 720900, 0, 0, 786436, 65536, 0, 851972, 65536, 0, 917508, 0, 0, 917507, 0, 0, 917506, 0, 0, 786433, 65536, 0, 786434, 0, 0, 589825, 0, 0, 655361, 65536, 0, 720897, 65536, 0, 720898, 0, 0, 720899, 0, 0, 786435, 65536, 0, 851971, 65536, 0, 851970, 65536, 0, 851969, 65536, 0, 917505, 0, 0, 983041, 65536, 0, 983042, 65536, 0, 983043, 65536, 0, 983044, 65536, 0, 983045, 65536, 0, 983046, 65536, 0, 983047, 65536, 0, 917512, 0, 0, 983048, 65536, 0, 851976, 65536, 0, 786440, 65536, 0, 786439, 65536, 0, 786438, 65536, 0, 851974, 65536, 0, 851975, 0, 0, 917511, 0, 0, 917510, 65536, 0, 917509, 0, 0, 851973, 0, 0, 786437, 65536, 0, 786444, 0, 0, 786443, 0, 0, 786442, 65536, 0, 851978, 65536, 0, 917514, 0, 0, 851979, 65536, 0, 917515, 0, 0, 983051, 65536, 0, 983050, 65536, 0, 983049, 65536, 0, 917513, 0, 0, 851977, 65536, 0, 786441, 65536, 0, 524304, 0, 0, 65553, 0, 0)

[node name="Fish" parent="." instance=ExtResource("3_b1ev0")]
position = Vector2(641, 486)

[node name="Camera2D" type="Camera2D" parent="Fish"]
position = Vector2(1, 1)
limit_left = 0
limit_top = 0
limit_right = 4352
limit_bottom = 4352

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8704, 0)

[node name="Foods" type="Node2D" parent="."]
position = Vector2(-3, -3)

[node name="Food" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3432, 1644)

[node name="Food3" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3806, 465)

[node name="Food4" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3970, 1148)

[node name="Food5" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(2830, 498)

[node name="Food6" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(2701, 2192)

[node name="Food7" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(2154, 3444)

[node name="Food8" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3964, 2416)

[node name="Food9" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3202, 2939)

[node name="Food10" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(396, 2169)

[node name="Food11" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3994, 3986)

[node name="Food13" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3425, 3987)

[node name="Food14" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(449, 4029)

[node name="Food15" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(366, 3471)

[node name="Food16" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(1662, 2681)

[node name="Food17" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(1550, 482)

[node name="Food18" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(651, 1162)

[node name="Food19" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(1663, 3597)

[node name="Food20" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(1426, 1172)

[node name="Food12" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(3959, 2933)

[node name="Food2" parent="Foods" instance=ExtResource("4_2jg7m")]
position = Vector2(2153, 1674)

[node name="Task1" parent="." instance=ExtResource("6_scjwj")]

[node name="HUD" parent="." instance=ExtResource("6_5064b")]
script = ExtResource("7_gv58x")

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(4260, 2180)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(-25, -1801)
shape = SubResource("RectangleShape2D_g2m3i")

[node name="Sprite2D" type="Sprite2D" parent="ExitArea"]
position = Vector2(-30, -1798)
rotation = 1.5708
texture = ExtResource("6_pueto")

[node name="TestArea" type="Area2D" parent="."]
position = Vector2(651, 949)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestArea"]
position = Vector2(-4, -45)
shape = SubResource("RectangleShape2D_v05nn")

[node name="Decoration" type="Node2D" parent="."]

[node name="Node2D2" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(3783, 1221)

[node name="Node2D3" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(3101, 1738)

[node name="Node2D4" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(3598, 3014)

[node name="Node2D5" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(1305, 1730)

[node name="Node2D6" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(1687, 2253)

[node name="Node2D7" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(1215, 2759)

[node name="Node2D8" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(776, 3517)

[node name="Node2D9" parent="Decoration" instance=ExtResource("8_suhvw")]
position = Vector2(1435, 4032)

[node name="Node2D" parent="Decoration" instance=ExtResource("9_cxxxh")]
position = Vector2(4003, 647)

[node name="Node2D10" parent="Decoration" instance=ExtResource("9_cxxxh")]
position = Vector2(2307, 629)

[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="body_entered" from="TestArea" to="." method="_on_test_area_body_entered"]
